Added a form UI to the index.html and a CSS class for the table in the style.css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,37 @@
 <a id="welcome-to-front-end-web-demo" class="anchor" href="#welcome-to-front-end-web-demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Front-end Web Demo.</h3>
 
 <p>A Demo Web page that is hosted on a GitHub repository.</p>
-
+<form action="">
+    <table class="table">
+        <tr>
+            <td>First Name</td> 
+            <td>Other Names</td>
+        </tr>
+        <tr>
+            <td>
+                <input type="text" name="firstname" value="Anna">
+            </td> 
+            <td> 
+                <input type="text" name="othernames" value="Joy Rodgers">
+            </td>
+        </tr>
+        <tr>
+            <td>Profession</td>
+            <td>Hobbies</td>
+        </tr>
+        <tr>
+            <td>
+              <select name="profession">
+                <option value="IT">IT Professional</option>
+                <option value="Business">Business man or woman</option>
+              </select>
+            </td> 
+            <td> 
+                <textarea rows="4" cols="" style="width:100%" placeholder="Type your hobbies here, separated by a comma"></textarea>
+            </td>
+        </tr>
+    </table>
+</form>
 <h3>
 <a id="contact-us" class="anchor" href="#contact-us" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact us</h3>
 
