Added Andela Boot camp label at the top

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <p>#1: A Demo repository illustrating how to use GitHub to start developing HTML+CSS Web page</p>
         <p class="view"><a href="https://github.com/koyowe/Frontendwebdemo">View the Project on GitHub <small>koyowe/Frontendwebdemo</small></a></p>
         <ul>
-          <li><a href="https://github.com/koyowe/Frontendwebdemo/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/koyowe/Frontendwebdemo/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/koyowe/Frontendwebdemo">View On <strong>GitHub</strong></a></li>
+          <li style="width:200px"><a href="https://github.com/koyowe/Frontendwebdemo/zipball/master"><strong>Andela Boot camp X</strong></a></li>
         </ul>
       </header>
       <section>
